# ucspsender

./: .gitignore  README.md
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/ucsp/sender/: MainActivity.kt
android-app/app/src/main/java/com/ucsp/sender/adaptive/: AdaptiveController.kt
android-app/app/src/main/java/com/ucsp/sender/capture/: CameraController.kt  CameraRenderer.kt
android-app/app/src/main/java/com/ucsp/sender/capture/gl/: EglCore.kt  OesTextureProgram.kt
android-app/app/src/main/java/com/ucsp/sender/encode/: H264Encoder.kt
android-app/app/src/main/java/com/ucsp/sender/network/: BackchannelListener.kt  FecEncoder.kt  UcspHeader.kt  UcspPacketizer.kt  UcspSender.kt  WifiSignalMonitor.kt
android-app/app/src/main/java/com/ucsp/sender/service/: StreamingService.kt
android-app/app/src/main/java/com/ucsp/sender/thermal/: ThermalMonitor.kt
android-app/app/src/main/res/drawable/: ic_launcher.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/layout-land/: activity_main.xml
android-app/app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
docs/: architecture.md  index.html  roadmap.md
docs/protocol/: ucsp-spec.md
obs-plugin/: CMakeLists.txt  buildspec.json
obs-plugin/data/locale/: en-US.ini  pt-BR.ini
obs-plugin/installer/: ucsp-plugin-setup.iss
obs-plugin/src/: plugin-main.cpp  ucsp-source.cpp  ucsp-source.h
obs-plugin/src/ucsp/: backchannel_sender.cpp  backchannel_sender.h  fec_decoder.cpp  fec_decoder.h  frame_reassembler.cpp  frame_reassembler.h  h264_decoder.cpp  h264_decoder.h  sender_registry.cpp  sender_registry.h  ucsp_protocol.cpp  ucsp_protocol.h  udp_receiver.cpp  udp_receiver.h
